--- a/admin/start-project-2.html
+++ b/admin/start-project-2.html
@@ -54,7 +54,13 @@
                         <button type="button" class="btn btn-primary active">项目详述</button>
                     </div>
                     <div class="btn-group">
-                        <button type="button" class="btn btn-default">项目回馈</button>
+                        <button type="button" class="btn btn-default disabled">项目回馈</button>
+                    </div>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-default disabled">预览</button>
+                    </div>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-default disabled">发布</button>
                     </div>
                 </div>
                 <div class="panel panel-primary">
