--- a/admin/head.html
+++ b/admin/head.html
@@ -15,8 +15,8 @@
                 <li class="dropdown">
                     <a href="start-project-description.html " class=" dropdown-toggle" data-toggle="dropdown">发起项目 <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="start-project-description.html">筹资金</a></li>
-                        <li><a href="start-project-description.html" ">筹实物</a></li>
+                        <li><a href="start-project-1.html">筹资金</a></li>
+                        <li><a href="start-project-1.html" ">筹实物</a></li>
                         <li><a href="#">发现小伙伴</a></li>
                                
                     </ul>
