--- a/project-view.html
+++ b/project-view.html
@@ -407,7 +407,7 @@
                             <div class="dot mtb15"></div>
                             <div class="row">
                                 <div class="col-lg-6 col-sm-12"><button type="button" class="btn btn-danger btn-lg btn-block" data-toggle="modal" data-target="#funding-box"><span class="glyphicon glyphicon-heart"></span> 支 持</button></div>
-                                <div class="col-lg-6 col-sm-12"><button type="button" class="btn btn-info btn-lg btn-block"><span class="glyphicon glyphicon-plus"></span> 加 入</button></div>
+                                <div class="col-lg-6 col-sm-12"><button type="button" class="btn btn-info btn-lg btn-block" data-toggle="modal" data-target="#funding-man-box"><span class="glyphicon glyphicon-plus"></span> 加 入</button></div>
                             </div>
                         </div>
                     </div>
@@ -542,6 +542,57 @@
                         </div>
                     </div>
 
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <span class="pull-left fz16">支持电脑1台</span>
+                            <span class="pull-right fz12 pt3">已有 <label class="badge">1</label> 位支持者 </span>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="panel-body">
+                            <dl class="fz12">
+                                <dd>
+
+                                    限额 <label>1</label>位 | 剩余 <label>0</label>位
+                                    <br />
+                                    <br />
+                                </dd>
+                                <dd>
+                                    <ol>
+                                        <li>《卡在咽喉的时光》图书一本。如需签名或赠言，请在讨论区留言。</li>
+                                        <li>附赠《藏爱：香巴拉的私享盛宴》一本。如需签名或赠言，请在讨论区留言。</li>
+                                        <li>随机抽取空白明信片一张，随书附送。</li>
+                                        <li>快递包邮。</li>
+
+                                    </ol>
+                                </dd>
+
+                                <dd><b>配送费用:</b> 免运费</dd>
+                                <dd><b>预计回报发送时间:</b> 项目成功结束后30天内</dd>
+
+                            </dl>
+                        </div>
+                        <div class="panel-footer">
+
+                            <button class="btn btn-danger" disabled="disabled">限额已满</button>
+                        </div>
+                    </div>
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <span class="pull-left fz16">5位伙伴</span>
+                            <span class="pull-right fz12 pt3">已有 <label class="badge">2</label> 位感兴趣 </span>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="panel-body">
+                            <h4>合作开发</h4>
+                            <p>掌握一定的网站开发技术、参与网站设计交流。</p>
+                        </div>
+                        <div class="panel-footer">
+                            <button class="btn btn-danger" onclick="location.href='project-funding.html'">申请加入</button>
+                        </div>
+                    </div>
+
+
                     <div class="alert alert-info" role="alert">
                         <h4>关于支持与退款</h4>
                         <hr class="mp0" />
@@ -653,11 +704,84 @@
                     </div>
 
 
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <span class="pull-left fz16">支持电脑1台</span>
+                            <span class="pull-right fz12 pt3">已有 <label class="badge">1</label> 位支持者 </span>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="panel-body">
+                            <dl class="fz12">
+                                <dd>
+
+                                    限额 <label>1</label>位 | 剩余 <label>0</label>位
+                                    <br />
+                                    <br />
+                                </dd>
+                                <dd>
+                                    <ol>
+                                        <li>《卡在咽喉的时光》图书一本。如需签名或赠言，请在讨论区留言。</li>
+                                        <li>附赠《藏爱：香巴拉的私享盛宴》一本。如需签名或赠言，请在讨论区留言。</li>
+                                        <li>随机抽取空白明信片一张，随书附送。</li>
+                                        <li>快递包邮。</li>
+
+                                    </ol>
+                                </dd>
+
+                                <dd><b>配送费用:</b> 免运费</dd>
+                                <dd><b>预计回报发送时间:</b> 项目成功结束后30天内</dd>
+
+                            </dl>
+                        </div>
+                        <div class="panel-footer">
+
+                            <button class="btn btn-danger" disabled="disabled">限额已满</button>
+                        </div>
+                    </div>
+
+
+
                 </div>
                 <!--<div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 <button type="button" class="btn btn-primary">Save changes</button>
             </div>-->
+            </div>
+        </div>
+    </div>
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="funding-man-box" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <h4 class="modal-title" id="myModalLabel">选择你感兴趣的岗位</h4>
+                </div>
+                <div class="modal-body" style="max-height:400px; overflow:auto;">
+
+                    
+
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <span class="pull-left fz16">5位伙伴</span>
+                            <span class="pull-right fz12 pt3">已有 <label class="badge">2</label> 位感兴趣 </span>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="panel-body">
+                            <h4>合作开发</h4>
+                            <p>掌握一定的网站开发技术、参与网站设计交流。</p>
+                        </div>
+                        <div class="panel-footer">
+                            <button class="btn btn-danger" onclick="location.href='project-funding.html'">申请加入</button>
+                        </div>
+                    </div>
+
+
+                </div>
+                
             </div>
         </div>
     </div>
