--- a/admin/user-index-info.html
+++ b/admin/user-index-info.html
@@ -92,7 +92,7 @@
             <div class="col-xs-3">
 
                 <div class="panel panel-default">
-                    <div class="panel-heading">TA的综合得分</div>
+                    <div class="panel-heading">我的综合得分</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-lg-12">
