--- a/admin/user-index.html
+++ b/admin/user-index.html
@@ -92,7 +92,7 @@
             <div class="col-xs-3">
 
                 <div class="panel panel-default">
-                    <div class="panel-heading">TA的综合得分</div>
+                    <div class="panel-heading">我的综合得分</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-lg-12">
@@ -235,10 +235,10 @@
                 <div class="tabbable" id="tabs-736012">
                     <!-- Only required for left/right tabs -->
                     <ul class="nav nav-tabs" style="background: #F3F5F6; border-top: 1px solid #dddddd;box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4); padding:0px; margin:0;">
-                        <li class="active"><a href="#panel-1" data-toggle="tab"><i class="glyphicon glyphicon-edit"></i>&nbsp; TA发起的项目</a></li>
-                        <li><a href="#panel-2" data-toggle="tab"><i class="glyphicon glyphicon-question-sign"></i>&nbsp; TA参加的项目</a></li>
-                        <li class=""><a href="#panel-3" data-toggle="tab"><i class="glyphicon glyphicon-warning-sign"></i>&nbsp; TA支持的项目</a></li>
-                        <li><a href="#panel-4" data-toggle="tab"><i class="glyphicon glyphicon-ok-circle"></i>&nbsp; TA关注的项目</a></li>
+                        <li class="active"><a href="#panel-1" data-toggle="tab"><i class="glyphicon glyphicon-edit"></i>&nbsp; 我发起的项目</a></li>
+                        <li><a href="#panel-2" data-toggle="tab"><i class="glyphicon glyphicon-question-sign"></i>&nbsp; 我参加的项目</a></li>
+                        <li class=""><a href="#panel-3" data-toggle="tab"><i class="glyphicon glyphicon-warning-sign"></i>&nbsp; 我支持的项目</a></li>
+                        <li><a href="#panel-4" data-toggle="tab"><i class="glyphicon glyphicon-ok-circle"></i>&nbsp; 我关注的项目</a></li>
 
 
 
