--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             </div>
             <div class="col-sm-6 col-md-3">
                 <div class="thumbnail">
-                    <a href="#"><img alt="项目简介内容，长度200字以内" title="项目简介内容，长度200字以内" src="img/project/6.jpg"></a>
+                    <a href="project-view-team.html"><img alt="项目简介内容，长度200字以内" title="项目简介内容，长度200字以内" src="img/project/6.jpg"></a>
                     <div class="caption">
                         <h5><a href="#" title="BelayCords - Reversible USB Charging Cords iPhone & Android">BelayCords - Reversible USB Charging Cords iPhone…</a> </h5>
                         <label class="small"> 项目经理： <strong><a href="#">Made In College</a></strong></label>
