--- a/project-team-2.html
+++ b/project-team-2.html
@@ -44,16 +44,13 @@
             <div class="row mtb15">
                 <div class="btn-group btn-group-justified">
                     <div class="btn-group">
-                        <button type="button" class="btn btn-success disabled text-overflow active nocursor">订单信息填写页</button>
+                        <button type="button" class="btn btn-success disabled active nocursor">申请加入团队</button>
                     </div>
                     <div class="btn-group">
-                        <button type="button" class="btn btn-success disabled text-overflow active nocursor">订单信息确认页</button>
+                        <button type="button" class="btn btn-success  nocursor active">审核</button>
                     </div>
                     <div class="btn-group">
-                        <button type="button" class="btn btn-success disabled text-overflow active nocursor">支付</button>
-                    </div>
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-success active">完成</button>
+                        <button type="button" class="btn btn-default disabled">确认</button>
                     </div>
                 </div>
             </div>
@@ -63,7 +60,7 @@
 
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4>支付提示</h4>
+                        <h4>申请加入团队提示</h4>
                     </div>
                     <div class="panel-body ren-funding">
                         <div class="mtb15"><br /></div>
@@ -73,9 +70,9 @@
                                 <span class="glyphicon glyphicon-ok fz28 bg-color-v"></span>
                             </a>
                             <div class="media-body">
-                                <h4 class="media-heading bg-color-v">订单支付成功！</h4>
+                                <h4 class="media-heading bg-color-v">申请提交成功！</h4>
                                 <p>
-                                    订单号：12345678  &nbsp;&nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp;&nbsp;  支付金额（元）： ￥9.00元     &nbsp;&nbsp;&nbsp; <a href="#">查看订单详情</a>
+                                   请耐心等待项目组长审核。并随时留意<a href="admin/info-center-project.html">消息中心</a>通知。
                                 </p>
                             </div>
                         </div>
