--- a/project-team-3.html
+++ b/project-team-3.html
@@ -44,16 +44,13 @@
             <div class="row mtb15">
                 <div class="btn-group btn-group-justified">
                     <div class="btn-group">
-                        <button type="button" class="btn btn-success disabled text-overflow active nocursor">订单信息填写页</button>
+                        <button type="button" class="btn btn-success disabled active nocursor">申请加入团队</button>
                     </div>
                     <div class="btn-group">
-                        <button type="button" class="btn btn-success disabled text-overflow active nocursor">订单信息确认页</button>
+                        <button type="button" class="btn btn-success  disabled active nocursor">审核</button>
                     </div>
                     <div class="btn-group">
-                        <button type="button" class="btn btn-success disabled text-overflow active nocursor">支付</button>
-                    </div>
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-success active">完成</button>
+                        <button type="button" class="btn btn-success  nocursor active">确认</button>
                     </div>
                 </div>
             </div>
@@ -63,7 +60,7 @@
 
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4>支付提示</h4>
+                        <h4>恭喜</h4>
                     </div>
                     <div class="panel-body ren-funding">
                         <div class="mtb15"><br /></div>
@@ -73,9 +70,9 @@
                                 <span class="glyphicon glyphicon-ok fz28 bg-color-v"></span>
                             </a>
                             <div class="media-body">
-                                <h4 class="media-heading bg-color-v">订单支付成功！</h4>
+                                <h4 class="media-heading bg-color-v">你已成功加入xxxx项目。</h4>
                                 <p>
-                                    订单号：12345678  &nbsp;&nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp;&nbsp;  支付金额（元）： ￥9.00元     &nbsp;&nbsp;&nbsp; <a href="#">查看订单详情</a>
+                                   <a href="#" class="btn btn-success btn-sm plr30">查看项目工作室</a>
                                 </p>
                             </div>
                         </div>
@@ -85,6 +82,35 @@
                        
                            你可以： <a href="list.html">继续发现项目</a>    <a href="#">问题反馈</a>
                         
+                    </div>
+                </div>
+
+
+
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4>抱歉</h4>
+                    </div>
+                    <div class="panel-body ren-funding">
+                        <div class="mtb15"><br /></div>
+                        <div class="media pl15">
+                            <a class="pull-left" href="#">
+                                <!--<img class="media-object" src="..." alt="...">-->
+                                <span class="glyphicon glyphicon-remove fz28" style="color:#d9534f;"></span>
+                            </a>
+                            <div class="media-body">
+                                <h4 class="media-heading">很遗憾，你未能加入xxxx项目。</h4>
+                                <p>
+                                    <a href="#" class="btn btn-default btn-sm plr30">收藏本项目</a>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="mtb15"><br /></div>
+                    </div>
+                    <div class="panel-footer">
+
+                        你可以： <a href="list.html">继续发现项目</a>    <a href="#">问题反馈</a>
+
                     </div>
                 </div>
             </div>
