--- a/project-view.html
+++ b/project-view.html
@@ -545,14 +545,14 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <span class="pull-left fz16">支持电脑1台</span>
-                            <span class="pull-right fz12 pt3">已有 <label class="badge">1</label> 位支持者 </span>
+                            <span class="pull-right fz12 pt3">已有 <label class="badge">0</label> 位支持者 </span>
                             <div class="clearfix"></div>
                         </div>
                         <div class="panel-body">
                             <dl class="fz12">
                                 <dd>
 
-                                    限额 <label>1</label>位 | 剩余 <label>0</label>位
+                                    限额 <label>1</label>位 | 剩余 <label>1</label>位
                                     <br />
                                     <br />
                                 </dd>
@@ -573,7 +573,7 @@
                         </div>
                         <div class="panel-footer">
 
-                            <button class="btn btn-danger" disabled="disabled">限额已满</button>
+                            <button class="btn btn-danger" onclick=" location.href='project-matter-1.html'">立即支持</button>
                         </div>
                     </div>
 
