--- a/admin/head.html
+++ b/admin/head.html
@@ -27,8 +27,8 @@
                 <li id="ren-btn-notifications">
                     <a href="info-center.html" style="padding:15px 20px 8px 20px;" class="dropdown-toggle ren-dropdown-toggle-user" data-toggle="dropdown"><span class="badge ren-info-msg-bell-badge">99+</span><span class="glyphicon glyphicon-bell" style="font-size:22px;"></span><div class="sr-only">消息</div></a>
                     <ul class="dropdown-menu ren-dropdown-menu-1" role="menu" aria-labelledby="ren-dropdown-toggle-user">
-                        <li><a href="#">站点消息 <span class="badge">4</span></a> </li>
-                        <li><a href="doc.html">项目消息 </a></li>
+                        <li><a href="info-center.html">站点消息 <span class="badge">4</span></a> </li>
+                        <li><a href="info-center-project.html">项目消息 </a></li>
                         <li><a href="user-page.html">群组消息 <span class="badge">9</span></a></li>
                         <li><a href="settings.html">私信消息 <span class="badge">20</span></a></li>
                         <li class="divider"></li>
@@ -40,7 +40,7 @@
                     <a href="#" class="dropdown-toggle ren-dropdown-toggle-user" data-toggle="dropdown"><img src="../img/avatar2_small.jpg" class="img-circle pointer dropdown-toggle" data-toggle="dropdown"> admin <span class="caret"></span></a>
                     <ul class="dropdown-menu ren-dropdown-menu" role="menu" aria-labelledby="drop3">
                         <li><a href="user-index.html"><i class="glyphicon glyphicon-dashboard"></i> &nbsp; 个人主页</a> </li>
-                        <li><a href="#"><i class="glyphicon glyphicon-paperclip"></i> &nbsp; 我的项目<span class="badge">4</span></a> </li>
+                        <li><a href="my-project-home.html"><i class="glyphicon glyphicon-paperclip"></i> &nbsp; 我的项目<span class="badge">4</span></a> </li>
                         <li><a href="school-list.html"><i class="glyphicon glyphicon-book"></i> &nbsp;&nbsp;我的校园</a></li>
                         <li><a href="user-page.html"><i class="glyphicon glyphicon-user"></i> &nbsp;&nbsp;个人中心</a></li>
                         <li><a href="settings.html"><i class="glyphicon glyphicon-cog"></i> &nbsp;&nbsp;系统设置</a></li>
