我的项目页面 邀请评价

--- a/admin/info-center-project.html
+++ b/admin/info-center-project.html
@@ -292,7 +292,7 @@
                                             </dt>
                                             <dd class="fz12">
                                                 现在你可以
-                                                <a href="#">邀请学生评价</a> 或  <a href="#">邀请支持者评价</a>
+                                                <a href="#">邀请学生评价</a>  
                                             </dd>
                                         </dl>
                                     </div>
