--- a/admin/my-project-feedback-1.html
+++ b/admin/my-project-feedback-1.html
@@ -124,12 +124,12 @@
                      
                     <table class="table">
                         <colgroup>
-                            <col class="col-xs-5">
+                            <col class="col-xs-4">
                             <col class="col-xs-2">
                             <col class="col-xs-1">
                             <col class="col-xs-2">
                             <col class="col-xs-1">
-                            <col class="col-xs-1">
+                            <col class="col-xs-2">
                         </colgroup>
                         <thead>
                             <tr>
@@ -158,7 +158,30 @@
 
                                 </td>
                                 <td>
-                                    筹款中/失败/已发货/项目执行中/确认收货/评价
+                                    筹款中
+                                    <span class="sr-only"> 筹款中/失败/已发货/项目执行中/确认收货/评价</span>
+                                    
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><a target="_blank" href="project-view.html">青春就是用来折腾抑郁忧伤低潮，但谁不爱青春？《卡在咽喉的时光》寻求出版支持！</a></td>
+                                <td>3,011.00元</td>
+                                <td>
+                                    20
+                                </td>
+                                <td>
+                                    2014-12-10 10:00:20
+                                </td>
+                                <td>
+
+
+                                    20000
+
+                                </td>
+                                <td>
+                                    已收货
+                                    <!--如果成功后-->
+                                    <button class="btn btn-info btn-sm ">评价<span class="sr-only"> 筹款中/失败/已发货/项目执行中/确认收货/评价</span></button>
                                 </td>
                             </tr>
                         </tbody>
