--- a/project-team-3.html
+++ b/project-team-3.html
@@ -130,7 +130,7 @@
                             <div class="media-body">
                                 <h4 class="media-heading bg-color-v">得到相应回馈。</h4>
                                 <p>
-                                    <a href="#" class="btn btn-success btn-sm plr30">查看我的回馈</a>
+                                    <a href="admin/my-project-feedback-1.html" class="btn btn-success btn-sm plr30">查看我的回馈</a>
                                 </p>
                             </div>
                         </div>
