项目评价 邀请学生评价 支持者评价

--- a/admin/my-project-rating.html
+++ b/admin/my-project-rating.html
@@ -108,100 +108,12 @@
             <!--right box-->
             <div class="col-xs-9">
 
-
+ 
                 <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <div class="row">
-                            <div class="col-lg-10">
-                                <h4>xxxx项目回馈详情</h4>
-                            </div>
-                            <div class="col-lg-2">
-                                <!--<button class="btn btn-success btn-sm" onclick=" location.href = 'start-project-1.html'"><span class="glyphicon glyphicon-plus"></span> 创建项目</button>-->
-                            </div>
-                        </div>
-                    </div>
-                    <!--------------------------组员信息------------------------------->
-
-                    <table class="table">
-                        <colgroup>
-                            <col class="col-xs-4">
-                            <col class="col-xs-2">
-                            <col class="col-xs-1">
-                            <col class="col-xs-2">
-                            <col class="col-xs-1">
-                            <col class="col-xs-2">
-                        </colgroup>
-                        <thead>
-                            <tr>
-                                <th>回馈描述</th>
-                                <th>金额</th>
-                                <th>件数</th>
-                                <th>发货时间</th>
-                                <th>总计</th>
-                                <th>项目状态</th>
-                            </tr>
-                        </thead>
-                        <tbody class="fz12">
-                            <tr>
-                                <td><a target="_blank" href="project-view.html">青春就是用来折腾抑郁忧伤低潮，但谁不爱青春？《卡在咽喉的时光》寻求出版支持！</a></td>
-                                <td>3,011.00元</td>
-                                <td>
-                                    20
-                                </td>
-                                <td>
-                                    2014-12-10 10:00:20
-                                </td>
-                                <td>
-
-
-                                    20000
-
-                                </td>
-                                <td>
-                                    筹款中
-                                    <span class="sr-only"> 筹款中/失败/已发货/项目执行中/确认收货/评价</span>
-
-                                </td>
-                            </tr>
-                            <tr>
-                                <td><a target="_blank" href="project-view.html">青春就是用来折腾抑郁忧伤低潮，但谁不爱青春？《卡在咽喉的时光》寻求出版支持！</a></td>
-                                <td>3,011.00元</td>
-                                <td>
-                                    20
-                                </td>
-                                <td>
-                                    2014-12-10 10:00:20
-                                </td>
-                                <td>
-
-
-                                    20000
-
-                                </td>
-                                <td>
-                                    已收货
-                                    <!--如果成功后-->
-                                    <button class="btn btn-info btn-sm ">评价<span class="sr-only"> 筹款中/失败/已发货/项目执行中/确认收货/评价</span></button>
-                                </td>
-                            </tr>
-                        </tbody>
-
-                    </table>
-                    <div class="panel-footer">
-                        <div class="row small text-right">
-                            <button class="btn btn-warning plr30">充值</button> &nbsp;&nbsp;
-                        </div>
-                    </div>
-                </div>
-
-                <div class="panel panel-default">
-                    <div class="panel-heading">评价</div>
+                    <div class="panel-heading">xxx项目评价</div>
                     <div class="panel-body">
                         <form role="form">
-                            <div class="form-group">
-                                <label for="exampleInputEmail1">回馈与描述是否相符？</label>
-                                <input type="text" class="form-control" id="exampleInputEmail1" placeholder="回馈与描述是否相符?">
-                            </div>
+                             
                            
                             <dl>
                                 <dt class=text-left>A能力素质</dt>
