--- a/admin/my-project-home.html
+++ b/admin/my-project-home.html
@@ -149,7 +149,10 @@
                                             <em>16天</em><br>剩余时间
                                         </span>
                                     </div>
-
+                                    <div class="dot"></div>
+                                    <div class="item-rate clearfix small">
+                                        <button class="btn btn-info btn-block btn-sm" onclick="location.href = 'start-project-1.html'"><span class="glyphicon glyphicon-import"></span> 进入项目工作室</button>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-4">
@@ -175,7 +178,10 @@
                                             <em>10天</em><br>剩余时间
                                         </span>
                                     </div>
-
+                                    <div class="dot"></div>
+                                    <div class="item-rate clearfix small">
+                                        <button class="btn btn-info btn-block btn-sm" onclick="location.href = 'start-project-1.html'"><span class="glyphicon glyphicon-import"></span> 进入项目工作室</button>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-4">
@@ -201,7 +207,10 @@
                                             <em>1天</em><br>剩余时间
                                         </span>
                                     </div>
-
+                                    <div class="dot"></div>
+                                    <div class="item-rate clearfix small">
+                                        <button class="btn btn-info btn-block btn-sm" onclick="location.href = 'start-project-1.html'"><span class="glyphicon glyphicon-import"></span> 进入项目工作室</button>
+                                    </div>
                                 </div>
                             </div>
 
@@ -247,6 +256,7 @@
     <script src="../js/bootstrap-datetimepicker/js/locale/zh-cn.js"></script>
     <script src="../js/bootstrap-datetimepicker/js/locale/ru.js"></script>
     <script src="../js/chosen/chosen.jquery.js"></script>
+    
 
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
