--- a/admin/my-project-join.html
+++ b/admin/my-project-join.html
@@ -149,7 +149,10 @@
                                             <em>16天</em><br>剩余时间
                                         </span>
                                     </div>
-
+                                    <div class="dot"></div>
+                                    <div class="item-rate clearfix small">
+                                        <button class="btn btn-info btn-block btn-sm" onclick="location.href = 'start-project-1.html'"><span class="glyphicon glyphicon-import"></span> 进入项目工作室</button>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-4">
@@ -175,7 +178,10 @@
                                             <em>10天</em><br>剩余时间
                                         </span>
                                     </div>
-
+                                    <div class="dot"></div>
+                                    <div class="item-rate clearfix small">
+                                        <button class="btn btn-info btn-block btn-sm" onclick="location.href = 'start-project-1.html'"><span class="glyphicon glyphicon-import"></span> 进入项目工作室</button>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-4">
@@ -201,7 +207,10 @@
                                             <em>1天</em><br>剩余时间
                                         </span>
                                     </div>
-
+                                    <div class="dot"></div>
+                                    <div class="item-rate clearfix small">
+                                        <button class="btn btn-info btn-block btn-sm" onclick="location.href = 'start-project-1.html'"><span class="glyphicon glyphicon-import"></span> 进入项目工作室</button>
+                                    </div>
                                 </div>
                             </div>
 
